--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,1 +1,15 @@
 // 全局样式文件
+
+// 引入第三方字体图标
+@import './icon.less';
+
+body {
+  bgccolor: f5f7f9;
+}
+.page-nav-bar {
+  background-color: #3296fa;
+  color: #fff;
+  .van-nav-bar__title {
+    color: #fff;
+  }
+}
