--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -4,12 +4,13 @@
 @import './icon.less';
 
 body {
-  bgccolor: f5f7f9;
+  background-color: #f5f7f9;
 }
 .page-nav-bar {
   background-color: #3296fa;
   color: #fff;
-  .van-nav-bar__title {
+  .van-nav-bar__title,
+  .van-icon {
     color: #fff;
   }
 }
